# test

./: Dockerfile  pyproject.toml  requirements.txt  test.py
.aws/: prod-task-definition.json
.github/: prod.yml
.github/workflows/: prod.yml
pythonpractice/test/: list_comp.py  pyproject.toml  python_test.py  sdf  test.py
pythonpractice/test/leetcode/: 347_TopK_Frequent_Elements.py
src/: __main__.py  server.py
src/questions/q1/: controller.py
src/questions/q10_klotski/: controller.py  request.py  solution.py
src/questions/q12_clummsy/: controller.py  request.py  response.py  solution.py
src/questions/q13_digital_colony/: controller.py  request.py  solution.py  solution2.py
src/questions/q1_bobby_bug/: controller.py  request.py  solution.py
src/questions/q2_dodge_bullet/: controller.py  response.py  solution2.py
src/questions/q3_bobby_bug_p1/: controller.py  request.py  solution.py
src/questions/q5_efficient_hunter_kazuma/: controller.py  request.py  response.py  solution.py
src/questions/sample/: controller.py  q1_request.py  q1_response.py  q1_service.py
